@@ -12,6 +12,7 @@
   * Added support for custom constructors.
   * Giving access to meta-table in libname.ClassName_.
   * Changed LuaL_check... for dubL_check... to work in try/catch scope (thanks to Ignacio Burgueño)
+  * Fixed a bug in argument decision tree when there are default values.
 
 == 0.6.6 2010-12-16
 
